# LLM-SafeRoute

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  test_model_api_key.example.txt
.cargo/: config.toml
.cursor/rules/: pre-commit-hygiene.mdc  release-cycle.mdc  windows-vm.mdc
.cursor/skills/release-cycle/: SKILL.md  reference.md
.cursor/skills/windows-release/: SKILL.md  reference.md
.githooks/: pre-commit
.github/workflows/: windows-nsis.yml
config/: local-hygiene.env.example  smr.example.yaml  smr.yaml  test.env.example
crates/smr-cli/: Cargo.toml
crates/smr-cli/src/: main.rs
crates/smr-core/: Cargo.toml  build.rs
crates/smr-core/assets/: index.html
crates/smr-core/src/: admin.rs  audit.rs  body_util.rs  config.rs  events.rs  http_state.rs  lib.rs  path_display.rs  paths.rs  provider.rs  proxy.rs  proxy_path.rs  request.rs  router.rs  server.rs  session_key.rs  sse_sanitize.rs  sse_stream.rs  sse_tool_ops.rs  state.rs  storage.rs  streaming.rs  tool_bundle.rs  traffic.rs  traffic_parse.rs
crates/smr-core/src/dlp/: bloom.rs  charset.rs  content.rs  disk_index.rs  doc_extract.rs  file.rs  file_index.rs  fragment.rs  mod.rs  normalize.rs  reversible_tests.rs  rg.rs  sanitize.rs  session.rs  shell_paths.rs  vault.rs
crates/smr-core/src/ops/: mod.rs  path_protection.rs
crates/smr-core/tests/: integration.rs
crates/smr-protocol/: Cargo.toml
crates/smr-protocol/src/: body.rs  convert.rs  lib.rs  protocol.rs  unified.rs
docs/: README.legacy-securemodelroute.en.md  README.legacy.zh-CN.md
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  create_icon.sh  tauri.conf.json  tauri.windows.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/nsis/: installer-hooks.nsh  post-install-cli.ps1  post-uninstall-cli.ps1
gui/src-tauri/src/: lib.rs  main.rs
resources/doc-tools/: .gitkeep
scripts/: backup-user-config.sh  bench-file-scan.sh  blackbox_test.py  check-commit-hygiene.sh  clean-dist.sh  clean-vm.sh  dist-layout.sh  doc_extract_verify.py  generate_openclaw_matrix_config.py  generate_openclaw_saferoute_config.py  generate_test_config.py  generate_vm_user_config.py  install-git-hooks.sh  install.ps1  install.sh  install_functional_test.py  live_test.py  load_test_env.ps1  load_test_env.sh  local_install_test.py  openclaw_deepseek_direct_probe.py  openclaw_matrix_common.py  openclaw_security_matrix_test.py  openclaw_surveys_dlp_verify.py  package-all.sh  package-macos.sh  package-windows-desktop.sh  package-windows-setup.sh  package-windows.sh  package.ps1  package.sh  patch_openclaw_saferoute.py  publish-github-release.sh  release-cycle.sh  release-full.sh  restore-user-config.sh  run-dev.sh  run_all_tests.ps1  run_all_tests.sh  run_full_tests.sh  (+11 more)
scripts/macos/: README.md  common.sh  install-smoke.sh  preflight.sh  release-cycle.sh  verify-package.sh
scripts/vm/: WINDOWS_VM.md  build-windows-desktop.ps1  clean-vm-artifacts.ps1  create-utm-vm.applescript  download-win11-iso.py  package-windows-gui.sh  package-windows-setup.sh  run-openclaw-matrix-remote.ps1  run-openclaw-matrix.sh  setup-windows-vm.sh  stop-guest-smr.ps1  stop-guest-smr.sh  utm-run-all-tests.sh  utm-run-app-blackbox.sh  utm-run-install-smoke.sh  utm-run-nsis-install-test.sh  utm-run-python-tests.sh  utm-run-test.sh  vm-ssh.sh  win-ssh-sdk-probe.ps1  win_verify_fix.py  windows-app-installed-test.ps1  windows-file-session-check.py  windows-install-dist.ps1  windows-install-smoke.ps1  windows-nsis-install-test.ps1  windows-post-install.ps1  windows-quick-gui-test.ps1  windows-run-python-tests.ps1  windows-utm-full-test.ps1
scripts/windows/: README.md  build-setup.ps1  common.ps1  ensure-nsis-tools.ps1  preflight.ps1  prepare-nsis-bundle.ps1  release-cycle.ps1  smoke_chat.py  stage-doc-tools.ps1  verify-package.ps1
