[workspace]
resolver = "2"
members = [
    "crates/smr-protocol",
    "crates/smr-core",
    "crates/smr-cli",
    "gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
dashmap = "6"
futures = "0.3"
http = "1"
http-body-util = "0.1"
http-body = "1"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "native-tokio", "ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
once_cell = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
aho-corasick = "1"
walkdir = "2"
rust-embed = "8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
parking_lot = "0.12"
dirs = "6"
open = "5"
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.37"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
