[package]
name = "smr-cli"
description = "SafeRoute CLI proxy server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "smr"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
smr-core = { path = "../smr-core" }
open.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
