[package]
name = "smr-core"
description = "SafeRoute core: routing, DLP, operation security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
http-body = { workspace = true }
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
rustls.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
smr-protocol = { path = "../smr-protocol" }
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
aho-corasick.workspace = true
walkdir.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dirs.workspace = true
open.workspace = true
pdf-extract.workspace = true
zip.workspace = true
quick-xml.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
rusqlite.workspace = true
notify.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
