[package]
name = "smr-gui"
version.workspace = true
description = "SafeRoute desktop GUI"
authors = ["SafeRoute"]
edition.workspace = true
license.workspace = true

[lib]
name = "smr_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "smr-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
smr-core = { path = "../../crates/smr-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
